correction on auth

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 GOOGLE_CLIENT_ID=610799132782-gku236rrq6fho5h5heavq5ech6t76t2p.apps.googleusercontent.com
 G00GLE_CLIENT_SECRET=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
+
+MOVIE_API_KEY = 79fff65d48f861f7c99acdf4d524e1f6
