--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
+    "@material-tailwind/react": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@sefailyasoz/react-carousel": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "daisyui": "^2.51.6",
+    "deepmerge": "^4.3.1",
     "next": "^13.4.1",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "superjson": "1.12.2",
+    "swr": "^2.1.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
